added responsive design to some files

--- a/core/templates/home.html
+++ b/core/templates/home.html
@@ -9,6 +9,7 @@
 
     <!-- Linking to CSS file -->
     <link rel="stylesheet" href="{% static 'admin/css/home.css' %}" />
+    <link rel="stylesheet" href="{% static 'admin/css/responsive.home.css' %}">
 </head>
 <body>
     <section id="welcome-section">
