--- a/staticfiles/admin/css/blogs.css
+++ b/staticfiles/admin/css/blogs.css
@@ -29,18 +29,12 @@ body {
 
 
 /* BLOGS LIST AND POSTS SECTION */
-h1 {
-    font-size: 38px;
-    text-align: center;
-    margin: 50px;
-    color: var(--green-200);
-}
-
 .blogs {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     gap: 20px;
+    justify-content: center;
+    padding: 20px;
 }
 
 .blog-card {
@@ -48,38 +42,27 @@ h1 {
     border-radius: 15px;
     box-shadow: var(--box-shadow);
     padding: 20px;
-    max-width: 500px;
-    text-align: left;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: auto;
+    text-align: center;
 }
 
 .blog-card h2 {
-    margin-bottom: 20px;
+    margin-bottom: 10px;
     color: var(--green-200);
-    text-align: center;
+    font-size: 24px;
 }
 
 .blog-card img {
     max-width: 100%;
-    max-height: 100%;
+    height: auto;
     border-radius: 10px;
     margin-bottom: 10px;
     object-fit: cover;
 }
 
-.blog-card h2 {
-    margin: 20px;
-    color: var(--green-200);
-}
-
-.blog-card img {
-    max-width: 100%;
-    border-radius: 10px;
-    margin-bottom: 10px;
+.blog-card p {
+    font-size: 16px;
+    line-height: 1.6;
+    color: var(--text-color);
 }
 
 .read-more {
@@ -98,47 +81,41 @@ h1 {
 }
 
 
+
 /* EXPERIENCES SECTION */
 .experiences-carousel {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    gap: 20px;
+    justify-content: center;
     margin: 20px;
-    max-width: 500px;
+    padding: 20px;
 }
 
 .experience-card {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-bottom: 30px;
-    padding: 20px;
     background: var(--gray-100);
     border-radius: 15px;
     box-shadow: var(--box-shadow);
+    padding: 20px;
+    text-align: center;
 }
 
 .experience-card h3 {
-    margin-bottom: 15px;
+    margin-bottom: 10px;
     color: var(--green-200);
+    font-size: 24px;
 }
 
 .experience-card .main-image {
     max-width: 100%;
-    width: 300px;
-    height: 400px;
+    height: auto;
     border-radius: 10px;
     margin-bottom: 10px;
     object-fit: cover;
 }
 
 .additional-images-carousel {
-    width: 100%;
-    margin-bottom: 20px;
-    padding: 20px;
-}
-
-.additional-images-carousel div {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    margin-top: 10px;
 }
 
 .additional-images-carousel img {
@@ -148,16 +125,12 @@ h1 {
 }
 
 .experience-card .content {
-    width: 100%;
-    max-width: 400px;
     background: white;
     border-radius: 10px;
     padding: 10px;
     box-shadow: var(--box-shadow);
-    display: flex;
-    align-items: center;
     color: var(--text-color);
-    margin-top: 20px;
+    margin-top: 10px;
     text-align: left;
 }
 
