--- a/static/admin/css/blogs.css
+++ b/static/admin/css/blogs.css
@@ -27,6 +27,12 @@ body {
     font-family: "Lato", sans-serif;
 }
 
+h1 {
+    text-align: center;
+    margin: 30px;
+
+}
+
 
 /* BLOGS LIST AND POSTS SECTION */
 .blogs {
@@ -35,6 +41,8 @@ body {
     gap: 20px;
     justify-content: center;
     padding: 20px;
+    max-width: 1200px;
+    margin: 0 auto;
 }
 
 .blog-card {
@@ -42,6 +50,11 @@ body {
     border-radius: 15px;
     box-shadow: var(--box-shadow);
     padding: 20px;
+    min-height: 350px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     text-align: center;
 }
 
@@ -57,6 +70,9 @@ body {
     border-radius: 10px;
     margin-bottom: 10px;
     object-fit: cover;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .blog-card p {
@@ -88,7 +104,8 @@ body {
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     gap: 20px;
     justify-content: center;
-    margin: 20px;
+    max-width: 1200px;
+    margin: 20px auto;
     padding: 20px;
 }
 
@@ -98,6 +115,9 @@ body {
     box-shadow: var(--box-shadow);
     padding: 20px;
     text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .experience-card h3 {
@@ -108,20 +128,24 @@ body {
 
 .experience-card .main-image {
     max-width: 100%;
-    height: auto;
     border-radius: 10px;
     margin-bottom: 10px;
     object-fit: cover;
+    display: block;
+    margin: 0 auto;
 }
 
 .additional-images-carousel {
     margin-top: 10px;
+    width: 100%;
+    margin: 20px auto;
 }
 
 .additional-images-carousel img {
     max-width: 100%;
-    border-radius: 5px;
+    border-radius: 10px;
     object-fit: cover;
+    display: block;
 }
 
 .experience-card .content {
@@ -132,6 +156,8 @@ body {
     color: var(--text-color);
     margin-top: 10px;
     text-align: left;
+    width: 100%;
+    max-width: 350px;
 }
 
 .experience-card .content i {
@@ -141,6 +167,9 @@ body {
 
 .experience-card .content p {
     margin: 0;
+    padding: 10px;
+    text-align: center;
+    font-size: 16px;
 }
 
 
